# Maths-Language-Processing

./: .gitignore  CMakeLists.txt  README.md  constant.cpp  dependent.cpp  dependent.h  derivative.cpp  derivative.h  differentiate.cpp  differentiate.h  evaluate.cpp  evaluate.h  expression.cpp  function.cpp  integral.cpp  integral.h  interfaces.h  main.cpp  operation.cpp  simplify.cpp  simplify.h  term.cpp  terms.cpp  token.cpp  token.h  tokenise.cpp  tokenise.h  variable.cpp
include/: constant.h  expression.h  function.h  function.ixx  term.h  terms.h  token.h  variable.h
lib/: constant.cpp  expression.cpp  function.cpp  term.cpp  terms.cpp  token.cpp  variable.cpp
